# variete-saveurs-mobile

./: CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  deny.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: AndroidManifest.xml  MainActivity.kt
assets/: app.css
assets/fonts/: LICENSE
docs/adr/: 0001-dioxus-pour-l-app-mobile.md  0002-envoi-email-via-api-brevo.md  0003-typst-embarque-pour-l-export-pdf.md
docs/superpowers/specs/: 2026-07-21-typst-pdf-spike-design.md
src/: main.rs
src/domain/: db.rs  mod.rs  models.rs  money.rs  numbering.rs  render.rs  validation.rs
src/platform/: export.rs  mod.rs  paths.rs  pdf_renderer.rs  png_stack.rs  share.rs
src/ui/: app.rs  catalog.rs  form.rs  home.rs  issue.rs  mod.rs  preview.rs  preview_gestures.js  record.rs
src/ui/components/: actions.rs  catalog_picker.rs  demo.rs  documents.rs  feedback.rs  fields.rs  line_sheet.rs  mod.rs
templates/: document.css  document.typ
tests/: dependency_rule.rs  ui_foundation.rs
