[package]
name = "devis-mobile"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
dioxus = { version = "0.7.9", features = ["mobile", "router"] }
html-escape = "0.2.14"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
typst = "0.15.1"
typst-pdf = "0.15.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"

[patch.crates-io]
# Upstream security fix for RUSTSEC-2026-0194/0195, pending a Citationberg release.
citationberg = { git = "https://github.com/typst/citationberg", rev = "06a591e2f237d25e1dfdedac3f3d1494c496c52d" }

[profile.release]
strip = "symbols"

[dev-dependencies]
tempfile = "3.27.0"
